assorted latent changes that I never committed; more focused updates and additions are hopefully forthcoming

--- a/templates/protobankpage.html
+++ b/templates/protobankpage.html
@@ -1,3 +1,10 @@
+<!--
+
+     - scan bank folder, identify new lists and assign number
+
+
+-->
+
 $partial("templates/head.html")$
 
 <body>
@@ -21,6 +28,8 @@ $partial("templates/head.html")$
     <!-- ... -->
 
     <!-- GENERATE INDEX OF LISTS -->
+    <!-- ... or just table of contents? -->
+    <!--     index, description, potential, ..  -->
 
     <!-- ... -->
     
