--- a/css/ss.css
+++ b/css/ss.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
  * ss.scss
  *
@@ -29,13 +30,15 @@
 /* $contactcolor: rgb(43, 160, 203); */
 /* $postscolor: rgb(135, 43, 255); */
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,400italic,900,900italic|Inconsolata:400,700);
-@import url(normalize.css);
+@import "normalize.css";
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 *, *:before, *:after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 body {
   display: flex;
@@ -43,16 +46,20 @@ body {
   min-height: 100vh;
   font-family: Merriweather, sans-serif;
   font-size: 1.6rem;
-  background-color: #060606; }
+  background-color: #060606;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 ul {
-  list-style-type: none; }
+  list-style-type: none;
+}
 
 pre, code, kbd, samp {
-  font-family: Inconsolata, monospace; }
+  font-family: Inconsolata, monospace;
+}
 
 main {
   min-height: 60rem;
@@ -67,181 +74,223 @@ main {
   /*   height: 100%; */
   /*   z-index: -1; */
   /*   background-image: url(/images/DSC09784.JPG); */
-  /* } */ }
-  main h1 {
-    max-width: 80rem;
-    margin: 0rem auto 0;
-    padding: 0 2rem 0;
-    font-size: 10rem;
-    font-weight: 900; }
-  main h2 {
-    max-width: 80rem;
-    margin: 2.4rem auto 1rem;
-    padding: 0 2rem 0;
-    font-size: 3.6rem; }
-  main h3 {
-    color: #888888;
-    max-width: 80rem;
-    margin: 1rem auto 0;
-    padding: 0 2rem 0;
-    font-size: 2.2rem; }
-  main p {
-    max-width: 80rem;
-    margin: 1rem auto 0;
-    padding: 1rem 2rem;
-    font-size: 2rem; }
-  main h1 + p {
-    padding-top: 0; }
-  main ul {
-    max-width: 75rem;
-    margin: 1rem auto 1rem;
-    padding: 0 1rem 0 2.2rem;
-    list-style-type: none; }
-    main ul li {
-      margin-bottom: 1rem;
-      padding-left: 2.2rem;
-      text-indent: -2.2rem; }
-    main ul li:before {
-      content: '\25E5';
-      margin-right: 1rem; }
-  main ul ul {
-    margin: 0.4rem auto 0; }
-    main ul ul li:before {
-      content: '\25B9'; }
-  main img {
-    display: block;
-    margin: 2rem 0;
-    padding: 0;
-    width: 100%;
-    height: auto; }
-  main .atgiftest {
-    display: inline-block;
-    max-width: 100%;
-    height: auto;
-    float: right;
-    margin: 2.4rem 0 2.4rem;
-    padding: 0 4rem 0; }
-  main .leftsideimg {
-    display: inline;
-    float: left;
-    margin: 2rem 0 2rem 3.6rem;
-    padding: 0 1rem 0 0;
-    width: 60%;
-    height: auto; }
-  main figure {
-    margin: 3.6rem 0 3.6rem;
-    padding: 0; }
-  main figcaption {
-    padding: 0 2.4rem;
-    font-style: italic; }
-  main dl {
-    font-size: 2.4rem; }
-    main dl dt {
-      width: 39%;
-      margin: 0 1% 0 0;
-      padding: 0;
-      text-align: right;
-      font-weight: bold;
-      float: left; }
-    main dl dd {
-      width: 59%;
-      margin: 0 0 0.5rem 1%;
-      padding: 0;
-      text-align: left;
-      float: left; }
+  /* } */
+}
+main h1 {
+  max-width: 80rem;
+  margin: 0rem auto 0;
+  padding: 0 2rem 0;
+  font-size: 10rem;
+  font-weight: 900;
+}
+main h2 {
+  max-width: 80rem;
+  margin: 2.4rem auto 1rem;
+  padding: 0 2rem 0;
+  font-size: 3.6rem;
+}
+main h3 {
+  color: #888888;
+  max-width: 80rem;
+  margin: 1rem auto 0;
+  padding: 0 2rem 0;
+  font-size: 2.2rem;
+}
+main p {
+  max-width: 80rem;
+  margin: 1rem auto 0;
+  padding: 1rem 2rem;
+  font-size: 2rem;
+}
+main h1 + p {
+  padding-top: 0;
+}
+main ul {
+  max-width: 75rem;
+  margin: 1rem auto 1rem;
+  padding: 0 1rem 0 2.2rem;
+  list-style-type: none;
+}
+main ul li {
+  margin-bottom: 1rem;
+  padding-left: 2.2rem;
+  text-indent: -2.2rem;
+}
+main ul li:before {
+  content: "◥";
+  margin-right: 1rem;
+}
+main ul ul {
+  margin: 0.4rem auto 0;
+}
+main ul ul li:before {
+  content: "▹";
+}
+main img {
+  display: block;
+  margin: 2rem 0;
+  padding: 0;
+  width: 100%;
+  height: auto;
+}
+main .atgiftest {
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+  float: right;
+  margin: 2.4rem 0 2.4rem;
+  padding: 0 4rem 0;
+}
+main .leftsideimg {
+  display: inline;
+  float: left;
+  margin: 2rem 0 2rem 3.6rem;
+  padding: 0 1rem 0 0;
+  width: 60%;
+  height: auto;
+}
+main figure {
+  margin: 3.6rem 0 3.6rem;
+  padding: 0;
+}
+main figcaption {
+  padding: 0 2.4rem;
+  font-style: italic;
+}
+main dl {
+  font-size: 2.4rem;
+}
+main dl dt {
+  width: 39%;
+  margin: 0 1% 0 0;
+  padding: 0;
+  text-align: right;
+  font-weight: bold;
+  float: left;
+}
+main dl dd {
+  width: 59%;
+  margin: 0 0 0.5rem 1%;
+  padding: 0;
+  text-align: left;
+  float: left;
+}
+main twitterwidget {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 article {
   margin: 2rem auto 4rem;
-  font-size: 2rem; }
-  article h1 {
-    font-size: 6rem; }
-  article h2 {
-    max-width: 60rem;
-    margin: 2.4rem auto 1rem;
-    padding: 0 2rem 0;
-    font-size: 3.6rem; }
-  article h3 {
-    margin-top: 0;
-    margin-bottom: 2rem; }
-    article h3 + h2 {
-      margin-top: 1rem; }
-  article p {
-    max-width: 60rem;
-    margin: 1rem auto 1rem;
-    padding: 0.4rem 1.6rem 0.4rem;
-    font-size: 2rem;
-    line-height: 140%; }
-  article ul {
-    max-width: 55rem;
-    margin: 1rem auto 1rem;
-    padding: 0 1rem 0 2.2rem;
-    list-style-type: none; }
-    article ul li {
-      margin-bottom: 1rem;
-      padding-left: 2.2rem;
-      text-indent: -2.2rem;
-      font-size: 2rem;
-      line-height: 140%; }
-    article ul li:before {
-      content: '\25E5';
-      margin-right: 1rem; }
-  article ul ul {
-    margin: 0.4rem auto 0; }
-    article ul ul li:before {
-      content: '\25B9'; }
-  article pre {
-    display: block;
-    margin: 2rem 0;
-    padding: 2rem;
-    width: 100%;
-    color: #f8f8f8;
-    background-color: #060606;
-    overflow: auto; }
-    article pre code {
-      display: block;
-      max-width: 80rem;
-      margin: 0;
-      padding: 0; }
-  article blockquote {
-    display: block;
-    margin: 2rem 0;
-    padding: 2rem;
-    width: 100%;
-    color: #f8f8f8;
-    background-color: #060606;
-    font-style: italic;
-    font-size: 2.2rem; }
-    article blockquote p {
-      display: block;
-      max-width: 80rem;
-      margin: 0 auto;
-      padding: 0 2rem; }
-  article .fullbleed {
-    display: block;
-    margin: 0;
-    padding: 0;
-    width: 100%; }
-  article figure {
-    max-width: 80rem;
-    margin: 2rem auto 2rem; }
-    article figure .graph {
-      margin: 0;
-      padding: 0;
-      color: #f8f8f8;
-      background-color: #060606; }
-  article audio {
-    display: block;
-    max-width: 80rem;
-    width: 100%;
-    margin: 1rem auto 1rem;
-    padding: 0 2rem; }
-  article footer {
-    margin: 3.2rem auto 1rem;
-    padding: 0 2rem;
-    max-width: 80rem;
-    min-height: 1rem;
-    border-top: 0.25rem solid #cccccc;
-    background-color: inherit; }
+  font-size: 2rem;
+}
+article h1 {
+  font-size: 6rem;
+}
+article h2 {
+  max-width: 60rem;
+  margin: 4rem auto 1rem;
+  padding: 0 2rem 0;
+  font-size: 3.6rem;
+}
+article h3 {
+  margin-bottom: 2rem;
+}
+article h3 + h2 {
+  margin-top: 1rem;
+}
+article p {
+  max-width: 60rem;
+  margin: 1rem auto 1rem;
+  padding: 0.4rem 1.6rem 0.4rem;
+  font-size: 2rem;
+  line-height: 140%;
+}
+article ul {
+  max-width: 55rem;
+  margin: 1rem auto 1rem;
+  padding: 0 1rem 0 2.2rem;
+  list-style-type: none;
+}
+article ul li {
+  margin-bottom: 1rem;
+  padding-left: 2.2rem;
+  text-indent: -2.2rem;
+  font-size: 2rem;
+  line-height: 140%;
+}
+article ul li:before {
+  content: "◥";
+  margin-right: 1rem;
+}
+article ul ul {
+  margin: 0.4rem auto 0;
+}
+article ul ul li:before {
+  content: "▹";
+}
+article pre {
+  display: block;
+  margin: 2rem 0;
+  padding: 2rem;
+  width: 100%;
+  color: #f8f8f8;
+  background-color: #060606;
+  overflow: auto;
+}
+article pre code {
+  display: block;
+  max-width: 80rem;
+  margin: 0;
+  padding: 0;
+}
+article blockquote {
+  display: block;
+  margin: 2rem 0;
+  padding: 2rem;
+  width: 100%;
+  color: #f8f8f8;
+  background-color: #060606;
+  font-style: italic;
+  font-size: 2.2rem;
+}
+article blockquote p {
+  display: block;
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+article .fullbleed {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+article figure {
+  max-width: 80rem;
+  margin: 2rem auto 2rem;
+}
+article figure .graph {
+  margin: 0;
+  padding: 0;
+  color: #f8f8f8;
+  background-color: #060606;
+}
+article audio {
+  display: block;
+  max-width: 80rem;
+  width: 100%;
+  margin: 1rem auto 1rem;
+  padding: 0 2rem;
+}
+article footer {
+  margin: 3.2rem auto 1rem;
+  padding: 0 2rem;
+  max-width: 80rem;
+  min-height: 1rem;
+  border-top: 0.25rem solid #cccccc;
+  background-color: inherit;
+}
 
 /* .post { */
 /*     h1 { */
@@ -253,62 +302,76 @@ main.index {
   /* background-image: url("https://dl.dropboxusercontent.com/u/2280103/dteli/images/grounds/DSC05275r1.JPG"); */
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 50% 50%; }
-  main.index #groundcap {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    padding: 1rem 2rem;
-    direction: rtl;
-    background-color: rgba(0, 0, 0, 0.5); }
-    main.index #groundcap h3 {
-      margin: 0;
-      padding: 0.4rem 0;
-      font-style: italic;
-      color: #f8f8f8;
-      text-shadow: -0.1rem 0.1rem 0 #f74d4d; }
-    main.index #groundcap h4, main.index #groundcap h5 {
-      margin: 0.4rem 0;
-      padding: 0;
-      color: #f8f8f8;
-      direction: ltr;
-      text-align: right; }
-    main.index #groundcap h5 {
-      font-size: 80%;
-      font-weight: normal; }
+  background-position: 50% 50%;
+}
+main.index #groundcap {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  padding: 1rem 2rem;
+  direction: rtl;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+main.index #groundcap h3 {
+  margin: 0;
+  padding: 0.4rem 0;
+  font-style: italic;
+  color: #f8f8f8;
+  text-shadow: -0.1rem 0.1rem 0 #f74d4d;
+}
+main.index #groundcap h4, main.index #groundcap h5 {
+  margin: 0.4rem 0;
+  padding: 0;
+  color: #f8f8f8;
+  direction: ltr;
+  text-align: right;
+}
+main.index #groundcap h5 {
+  font-size: 80%;
+  font-weight: normal;
+}
 
 main.core h1 {
-  text-shadow: -0.2rem 0.2rem 0 #f74d4d; }
+  text-shadow: -0.2rem 0.2rem 0 #f74d4d;
+}
 
 main.yield h1 {
-  text-shadow: -0.2rem 0.2rem 0 #ff872b; }
+  text-shadow: -0.2rem 0.2rem 0 #ff872b;
+}
 
 main.site h1 {
-  text-shadow: -0.2rem 0.2rem 0 #2ba0cb; }
+  text-shadow: -0.2rem 0.2rem 0 #2ba0cb;
+}
 
 main.post {
-  /* audio { box-shadow: -0.2rem 0.2rem 0 $k0Z; } */ }
-  main.post h1 {
-    text-shadow: -0.2rem 0.2rem 0 #872bff; }
+  /* audio { box-shadow: -0.2rem 0.2rem 0 $k0Z; } */
+}
+main.post h1 {
+  text-shadow: -0.2rem 0.2rem 0 #872bff;
+}
 
 div.buttonbox {
   max-width: 80rem;
   display: flex;
   margin: 2.4rem auto 2.4rem;
-  padding: 0 8rem; }
-  div.buttonbox a {
-    font-family: inherit;
-    line-height: 1.6rem;
-    flex-grow: 1;
-    background: none;
-    border: none;
-    text-align: center; }
-    div.buttonbox a span.buttontitle {
-      font-size: larger;
-      font-weight: bold; }
-    div.buttonbox a:hover {
-      color: #888888; }
+  padding: 0 8rem;
+}
+div.buttonbox a {
+  font-family: inherit;
+  line-height: 1.6rem;
+  flex-grow: 1;
+  background: none;
+  border: none;
+  text-align: center;
+}
+div.buttonbox a span.buttontitle {
+  font-size: larger;
+  font-weight: bold;
+}
+div.buttonbox a:hover {
+  color: #888888;
+}
 
 #asider {
   /* position: absolute; */
@@ -318,42 +381,55 @@ div.buttonbox {
   padding: 3.2rem 3.2rem 4rem;
   font-size: 2em;
   text-align: right;
-  color: #f8f8f8; }
-  #asider a {
-    /* display: block; */
-    /* margin-bottom: 2rem; */ }
-  #asider h2 {
-    margin: 0 0 0.5em;
-    font-size: 3.6rem;
-    font-weight: 400; }
-  #asider a {
-    color: #f8f8f8; }
-  #asider #corenav a:hover {
-    color: #f74d4d; }
-  #asider #yieldnav a:hover {
-    color: #ff872b; }
-  #asider #sitenav a:hover {
-    color: #2ba0cb; }
-  #asider #postlist h2 {
-    margin: 0;
-    padding: 0;
-    font-size: 2.4rem;
-    font-weight: 400; }
-  #asider #postlist h3 {
-    margin: 0;
-    padding: 0;
-    font-size: 1.5rem;
-    font-weight: 400;
-    color: #888888; }
-  #asider #postlist a {
-    margin: 0; }
-  #asider #postlist a:hover {
-    color: #872bff; }
-  #asider #postlist ul {
-    margin-top: 0;
-    margin-bottom: 0; }
-  #asider #postlist li {
-    margin-bottom: 2rem; }
+  color: #f8f8f8;
+}
+#asider a {
+  /* display: block; */
+  /* margin-bottom: 2rem; */
+}
+#asider h2 {
+  margin: 0 0 0.5em;
+  font-size: 3.6rem;
+  font-weight: 400;
+}
+#asider a {
+  color: #f8f8f8;
+}
+#asider #corenav a:hover {
+  color: #f74d4d;
+}
+#asider #yieldnav a:hover {
+  color: #ff872b;
+}
+#asider #sitenav a:hover {
+  color: #2ba0cb;
+}
+#asider #postlist h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 2.4rem;
+  font-weight: 400;
+}
+#asider #postlist h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: #888888;
+}
+#asider #postlist a {
+  margin: 0;
+}
+#asider #postlist a:hover {
+  color: #872bff;
+}
+#asider #postlist ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+#asider #postlist li {
+  margin-bottom: 2rem;
+}
 
 .curtain {
   background: -moz-linear-gradient(top, rgba(6, 6, 6, 0) 0%, rgba(6, 6, 6, 0) 60%, #060606 100%);
@@ -368,7 +444,7 @@ div.buttonbox {
   /* IE10+ */
   background: linear-gradient(to bottom, rgba(6, 6, 6, 0) 0%, rgba(6, 6, 6, 0) 60%, #060606 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00060606', endColorstr='#060606',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00060606", endColorstr="#060606",GradientType=0 );
   /* IE6-9 */
   width: 100%;
   height: 30rem;
@@ -376,7 +452,8 @@ div.buttonbox {
   padding: 0;
   border: 0;
   pointer-events: none;
-  flex: 1 0 0%; }
+  flex: 1 0 0%;
+}
 
 div#overasider {
   position: fixed;
@@ -388,7 +465,8 @@ div#overasider {
   padding: 0;
   height: 100vh;
   width: 36%;
-  pointer-events: none; }
+  pointer-events: none;
+}
 
 #nav0 {
   /* position: fixed; */
@@ -401,22 +479,27 @@ div#overasider {
   font-size: 4.8rem;
   font-weight: 900;
   background-color: #060606;
-  pointer-events: auto; }
-  #nav0 a {
-    display: inline-block;
-    color: #060606;
-    padding: 2rem;
-    margin-top: 1rem; }
-    #nav0 a:hover {
-      color: #f8f8f8;
-      text-shadow: -0.2rem 0.2rem 0 #060606; }
+  pointer-events: auto;
+}
+#nav0 a {
+  display: inline-block;
+  color: #060606;
+  padding: 2rem;
+  margin-top: 1rem;
+}
+#nav0 a:hover {
+  color: #f8f8f8;
+  text-shadow: -0.2rem 0.2rem 0 #060606;
+}
 
 footer {
   color: #888888;
   background-color: #060606;
-  pointer-events: auto; }
-  footer a {
-    color: #f8f8f8; }
+  pointer-events: auto;
+}
+footer a {
+  color: #f8f8f8;
+}
 
 footer#thelastword {
   /* position: fixed; */
@@ -425,57 +508,71 @@ footer#thelastword {
   height: 8rem;
   margin: 0;
   padding: 0 2em 4rem;
-  text-align: right; }
-  footer#thelastword p {
-    margin: 0;
-    color: #505050; }
+  text-align: right;
+}
+footer#thelastword p {
+  margin: 0;
+  color: #505050;
+}
 
 .tex sub {
   text-transform: uppercase;
   font-size: 1em;
   vertical-align: -0.1ex;
   margin-left: -0.15em;
-  margin-right: -0.15em; }
+  margin-right: -0.15em;
+}
 .tex sup {
   text-transform: uppercase;
   font-size: 0.75em;
   vertical-align: -0.2em;
   margin-left: -0.45em;
-  margin-right: -0.15em; }
+  margin-right: -0.15em;
+}
 
 .bluemph {
   color: #22F;
   text-shadow: -0.1rem 0.1rem 0 #666;
-  font-style: italic; }
+  font-style: italic;
+}
 
 .redmph {
   color: #F22;
   text-shadow: 0.1rem -0.1rem 0 #666;
-  font-style: italic; }
+  font-style: italic;
+}
 
 .bgc-core {
-  background-color: #f74d4d; }
+  background-color: #f74d4d;
+}
 
 .bgc-post {
-  background-color: #872bff; }
+  background-color: #872bff;
+}
 
 .bk0U {
-  background-color: #f74d4d; }
+  background-color: #f74d4d;
+}
 
 .bk0V {
-  background-color: #ff872b; }
+  background-color: #ff872b;
+}
 
 .bk0W {
-  background-color: #ffed47; }
+  background-color: #ffed47;
+}
 
 .bk0X {
-  background-color: #2bff87; }
+  background-color: #2bff87;
+}
 
 .bk0Y {
-  background-color: #2ba0cb; }
+  background-color: #2ba0cb;
+}
 
 .bk0Z {
-  background-color: #872bff; }
+  background-color: #872bff;
+}
 
 /* // issues with smoothness/ease of blurin-blurout
    .fuzzover {
@@ -493,91 +590,121 @@ footer#thelastword {
  */
 @media (max-width: 1350px) and (min-width: 900px) {
   main {
-    flex: 0 1 70%; }
-    main h1, main h2, main h3 {
-      padding: 0 4rem 0; }
-    main p {
-      padding: 0.4rem 4rem; }
-    main ul {
-      padding: 1rem 6rem; }
-    main ul ul {
-      padding: 0rem 2.4rem; }
-    main audio {
-      padding: 0 4rem; }
+    flex: 0 1 70%;
+  }
+  main h1, main h2, main h3 {
+    padding: 0 4rem 0;
+  }
+  main p {
+    padding: 0.4rem 4rem;
+  }
+  main ul {
+    padding: 1rem 6rem;
+  }
+  main ul ul {
+    padding: 0rem 2.4rem;
+  }
+  main audio {
+    padding: 0 4rem;
+  }
 
   div#overasider {
-    width: 30%; }
+    width: 30%;
+  }
 
   footer#thelastword {
-    font-size: 1.2rem; }
+    font-size: 1.2rem;
+  }
 
   .postlist h2 {
-    font-size: 2rem; }
+    font-size: 2rem;
+  }
 
   /*  .postlist h3 {
       font-size: 1.2rem;
     }
-  */ }
+  */
+}
 @media (max-width: 900px) {
   body {
     flex-direction: column;
-    display: block; }
+    display: block;
+  }
 
   main {
     position: relative;
-    flex: 1 0 70%; }
-    main h1 {
-      font-size: 10vw; }
-    main h2 {
-      font-size: 8vw; }
-    main dl dt {
-      width: 100%;
-      margin: 0.5rem 0 0 0;
-      padding: 0 2rem 0 4rem;
-      text-align: left; }
-    main dl dd {
-      width: 100%;
-      margin: 0 0 0.5rem 0;
-      padding: 0 2rem 0 6rem; }
-    main dl dd + dd {
-      margin-top: 0; }
-    main dl dt.blankdt {
-      display: none; }
+    flex: 1 0 70%;
+  }
+  main h1 {
+    font-size: 10vw;
+  }
+  main h2 {
+    font-size: 8vw;
+  }
+  main dl dt {
+    width: 100%;
+    margin: 0.5rem 0 0 0;
+    padding: 0 2rem 0 4rem;
+    text-align: left;
+  }
+  main dl dd {
+    width: 100%;
+    margin: 0 0 0.5rem 0;
+    padding: 0 2rem 0 6rem;
+  }
+  main dl dd + dd {
+    margin-top: 0;
+  }
+  main dl dt.blankdt {
+    display: none;
+  }
 
   div#asider {
     width: 100%;
-    position: static; }
+    position: static;
+  }
 
   .postlist h2 {
-    font-size: 3rem; }
+    font-size: 3rem;
+  }
 
   .postlist h3 {
-    font-size: 2.4rem; }
+    font-size: 2.4rem;
+  }
 
   div#overasider {
     position: static;
     flex: 1 1 30%;
     height: auto;
-    width: 100%; }
+    width: 100%;
+  }
 
   .curtain {
-    display: none; }
+    display: none;
+  }
 
   article {
     font-size: 2rem;
-    margin-top: 0; }
-    article h2 {
-      max-width: 90%; }
-    article p {
-      max-width: 90%;
-      font-size: 2rem; }
-    article ul {
-      max-width: 80%; }
-      article ul li {
-        font-size: 2rem; }
-    article figure {
-      max-width: none;
-      margin: 2rem 0;
-      width: 100%; } }
+    margin-top: 0;
+  }
+  article h2 {
+    max-width: 90%;
+  }
+  article p {
+    max-width: 90%;
+    font-size: 2rem;
+  }
+  article ul {
+    max-width: 80%;
+  }
+  article ul li {
+    font-size: 2rem;
+  }
+  article figure {
+    max-width: none;
+    margin: 2rem 0;
+    width: 100%;
+  }
+}
 
 /*# sourceMappingURL=ss.css.map */
