--- a/templates/lpcontent.html
+++ b/templates/lpcontent.html
@@ -1,14 +1,13 @@
-<article>
+<article class="lp">
 
   <h1><i>$lptitle$</i></h1>
-  <h1>$lpartist$</h1>
+  <h2 class="inheader">$lpartist$</h2>
+  <h3 class="inheader">$lplabel$, $lpyear$</h3>
 
-  <!-- image goes here -->
 
-  <h3>$lplabel$</h3>
-  <h3>$lpyear$</h3>
-  <h3><a href="$lplink$">Link</a></h3>
-  <h3><a href="$lpdiscogs$">Discogs</a></h3>
+  <img src="/img/lps/$id$.jpg" title="$lptitle$"/>
+
+  <h3 class="links"><a href="$lplink$">link</a>&emsp;|&emsp;<a href="$lpdiscogs$">Discogs</a></h3>
 
 
   $body$
