--- a/templates/overasider.html
+++ b/templates/overasider.html
@@ -4,11 +4,11 @@
 
   <nav id="nav0">
     <a class="bk0U" href="/index.html">myself</a>
-    <!-- <a class="bk0V" href="#">yield</a>
-         <a class="bk0W" href="#">vinyl</a>
-         <a class="bk0X" href="#">listbank</a> -->
+    <!-- <a class="bk0V" href="#">yield</a> -->
+    <a class="bk0W" href="$lLPUrl$">vinyl</a> 
+    <!-- <a class="bk0X" href="#">listbank</a> -->
     <a class="bk0Y" href="/meta/ntc.html">site</a>
-    <a class="bk0Z" href=$lpUrl$>posts</a>
+    <a class="bk0Z" href="$lpUrl$">posts</a>
   </nav>
 
   <!-- ..id="myleftfoot" lol -->
