--- a/css/ss.scss
+++ b/css/ss.scss
@@ -330,7 +330,7 @@ article {
     code {
       display: block;
       max-width: 80rem;
-      margin: 0;
+      margin: 0 auto;
       padding: 0;
     }
 
