--- a/templates/lpcontent.html
+++ b/templates/lpcontent.html
@@ -8,8 +8,10 @@
   <img src="/img/lps/$id$.jpg" title="$lptitle$"/>
 
   <h3 class="links">
+    $if(lplink)$
     <a href="$lplink$">link</a>
     &emsp;|&emsp;
+    $endif$
     $if(lpbandcamp)$
     <a href="$lpbandcamp$">Bandcamp</a>
     &emsp;|&emsp;
