--- a/templates/overasider.html
+++ b/templates/overasider.html
@@ -4,7 +4,7 @@
 
   <nav id="nav0">
     <a class="bk0U" href="/index.html">myself</a>
-    <!-- <a class="bk0V" href="#">yield</a> -->
+    <a class="bk0V" href="/yield/portfolio.html">portfolio</a>
     <a class="bk0W" href="$lLPUrl$">vinyl</a> 
     <!-- <a class="bk0X" href="#">listbank</a> -->
     <a class="bk0Y" href="/meta/ntc.html">site</a>
