--- a/templates/yieldpage.html
+++ b/templates/yieldpage.html
@@ -10,19 +10,26 @@ $partial("templates/head.html")$
 
   <div id="asider">
     <nav id="yieldnav">
+      <h5>frontend</h5>
+      <h2><a href="statics.html">statics</a></h2>
+      <h2><a href="js.html">js</a></h2>
 
 
+      <h5>data science</h5>
+      <h2><a href=""></a></h2>
+
+      <h5>writing</h5>
+      <h2><a href="/aanvullend/rmtc.pdf">thesis</a></h2>
+
+
+      <h5>miscellanea</h5>
+      <h2><a href="tapas.html">tapas</a></h2>
       <h2><a href="#">scrawls</a></h2>
-
-
-      <h2><a href="#">photos</a></h2>
-      
-      <h2><a href="#">mixes</a></h2>
+      <!-- <h2><a href="#">photos</a></h2> -->
+      <!-- <h2><a href="#">mixes</a></h2> -->
       <!-- <h2><a href="#">music</a></h2> -->
-
       <!-- <h2><a href="#">crosswords</a></h2> -->
-
-      <!-- <h2><a href="tapas.html">tapas</a></h2> -->
+      
     </nav>
   </div>
 
