--- a/css/ss.scss
+++ b/css/ss.scss
@@ -12,6 +12,16 @@
 // ==============================================
 
 
+// http://joshfrankel.me/blog/prevent-css-transitions-on-page-load-with-es6/
+.preload * {
+  transition: none !important;;
+}
+
+
+
+// ==============================================
+
+
 @import "normalize.css";
 
 
@@ -36,6 +46,7 @@ body {
   font-family: Merriweather, sans-serif;
   font-size: 1.6rem;              // body default font size set to 16pt
   background-color: $k00;
+  
 }
 
 
@@ -540,6 +551,7 @@ div.buttonbox {
   a {
     /* display: block; */
     /* margin-bottom: 2rem; */
+    transition: color 250ms linear;
   }
 
   h2 {
@@ -561,7 +573,25 @@ div.buttonbox {
 
   }
 
-  #yieldnav { a:hover { color: $k0V; } }
+  #yieldnav {
+    a:hover { color: $k0V; }
+
+    h5 {
+      margin: 0 0 2rem;
+      letter-spacing: 1rem;
+      text-transform: uppercase;
+      font-size: 80%;
+      color: $k03;
+      
+    }
+
+    h2 {
+      
+      +h5 {
+        margin: 8rem 0 2rem;
+      }
+    }
+  }
 
   #sitenav { a:hover { color: $k0Y; } }
   
@@ -700,11 +730,13 @@ div#overasider {
     color: $k00;
     padding: 2rem;
     margin-top: 1rem;
+    transition: color 250ms linear, text-shadow 250ms linear;
 
     &:hover {
       //box-shadow: -0.4rem 0.4rem 0 0 $k01;
       color: $k01;
       text-shadow: -0.2rem 0.2rem 0 $k00;
+      transform: 1s;
     }
 
   }
