--- a/css/ss.css
+++ b/css/ss.css
@@ -183,6 +183,25 @@ main twitterwidget {
   margin-left: auto;
   margin-right: auto;
 }
+main blockquote {
+  display: block;
+  margin: 2rem 0 3rem;
+  padding: 4rem;
+  width: 100%;
+  color: #f8f8f8;
+  background-color: #060606;
+  font-style: italic;
+  font-size: 2.2rem;
+}
+main blockquote p {
+  display: block;
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+main blockquote p + p {
+  margin-top: 2rem;
+}
 
 article {
   margin: 2rem auto 4rem;
@@ -247,22 +266,6 @@ article pre code {
   max-width: 80rem;
   margin: 0 auto;
   padding: 0;
-}
-article blockquote {
-  display: block;
-  margin: 2rem 0;
-  padding: 2rem;
-  width: 100%;
-  color: #f8f8f8;
-  background-color: #060606;
-  font-style: italic;
-  font-size: 2.2rem;
-}
-article blockquote p {
-  display: block;
-  max-width: 80rem;
-  margin: 0 auto;
-  padding: 0 2rem;
 }
 article .fullbleed {
   display: block;
@@ -404,7 +407,7 @@ div.buttonbox a:hover {
 #asider a {
   /* display: block; */
   /* margin-bottom: 2rem; */
-  transition: color 250ms linear;
+  transition: color 200ms linear;
 }
 #asider h2 {
   margin: 0 0 0.5em;
@@ -541,7 +544,7 @@ div#overasider {
   color: #060606;
   padding: 2rem;
   margin-top: 1rem;
-  transition: color 250ms linear, text-shadow 250ms linear;
+  transition: color 200ms linear, text-shadow 200ms linear;
 }
 #nav0 a:hover {
   color: #f8f8f8;
