mathjax update, yield pages update

--- a/templates/yieldpage.html
+++ b/templates/yieldpage.html
@@ -2,6 +2,9 @@ $partial("templates/head.html")$
 
 <body>
 
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  
 <!-- ... -->
   <main class="yield">
     $body$
@@ -24,7 +27,7 @@ $partial("templates/head.html")$
 
       <!-- <h5>miscellanea</h5> -->
       <h2><a href="tapas.html">tapas</a></h2>
-      <h2><a href="#">scrawls</a></h2>
+      <!-- <h2><a href="#">scrawls</a></h2> -->
       <!-- <h2><a href="#">photos</a></h2> -->
       <!-- <h2><a href="#">mixes</a></h2> -->
       <!-- <h2><a href="#">music</a></h2> -->
