--- a/templates/staticpage.html
+++ b/templates/staticpage.html
@@ -14,7 +14,7 @@ $partial("templates/head.html")$
     <nav id="corenav">
       <h2><a href="/about.html">about</a></h2>
       <h2><a href="/rte.html">background</a></h2>
-      <h2><a href="/res/res_if.html">résumé</a></h2>  <!--rt-->
+      <h2><a href="/newres.html">résumé</a></h2>  <!--rt-->
       <!-- <h2><a href="/profiles.html">profiles</a></h2> -->
       <!-- <h2><a href="#">art</a></h2> -->
       <h2><a href="/contact.html">contact</a></h2>
