--- a/templates/yieldpage.html
+++ b/templates/yieldpage.html
@@ -26,6 +26,8 @@ $partial("templates/head.html")$
 
 
       <!-- <h5>miscellanea</h5> -->
+      <h2><a href="music.html">music</a></h2>
+      
       <h2><a href="tapas.html">tapas</a></h2>
       <!-- <h2><a href="#">scrawls</a></h2> -->
       <!-- <h2><a href="#">photos</a></h2> -->
