--- a/css/ss.css
+++ b/css/ss.css
@@ -692,13 +692,30 @@ footer#thelastword p {
   main audio {
     padding: 0 4rem;
   }
+  main .sourceCode {
+    max-width: 60rem;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.6rem;
+  }
 
   div#overasider {
     width: 30%;
   }
 
+  #nav0 {
+    font-size: 2.8rem;
+  }
+  #nav0 a {
+    padding: 1rem;
+  }
+
   footer#thelastword {
     font-size: 1.2rem;
+  }
+
+  #asider h2 {
+    font-size: 2.4rem;
   }
 
   .postlist h2 {
