--- a/templates/yieldpage.html
+++ b/templates/yieldpage.html
@@ -19,7 +19,7 @@ $partial("templates/head.html")$
 
 
       <!-- <h5>data science</h5> -->
-      <h2><a href="">data</a></h2>
+      <h2><a href="ds.html">data</a></h2>
 
       <!-- <h5>writing</h5> -->
       <h2><a href="thesis.html">thesis</a></h2>
