--- a/css/ss.css
+++ b/css/ss.css
@@ -225,6 +225,26 @@ pre code {
   padding: 0;
 }
 
+table {
+  margin: 1.4rem auto;
+  border: 2px solid #888888;
+}
+table tr {
+  padding: 0.6rem;
+}
+table tr th {
+  padding: 0.6rem;
+  color: #f8f8f8;
+  background-color: #060606;
+}
+table tr td {
+  padding: 0.6rem;
+  border: 1px solid #888888;
+}
+table tr.even {
+  background-color: #cccccc;
+}
+
 article {
   margin: 2rem auto 4rem;
   font-size: 2rem;
