--- a/css/ss.css
+++ b/css/ss.css
@@ -247,6 +247,11 @@ article ul li {
   text-indent: -2.2rem;
   font-size: 2rem;
   line-height: 140%;
+  display: flex;
+}
+article ul li p {
+  margin-top: 0;
+  padding-right: 0;
 }
 article ul li:before {
   content: "◥";
