--- a/css/ss.scss
+++ b/css/ss.scss
@@ -343,8 +343,16 @@ article {
       margin-bottom: 1rem;
       padding-left: 2.2rem;
       text-indent: -2.2rem;
+      //text-indent: 0;
       font-size: 2rem;
       line-height: 140%;
+
+      display: flex;
+
+      p {
+        margin-top: 0;
+        padding-right: 0;
+      }
 
     }
 
